--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-handlebars": "^7.1.2",
     "express-hbs": "^2.5.0",
     "glob": "^10.3.10",
@@ -23,6 +24,7 @@
     "html-pdf": "^3.0.1",
     "html-to-pdf": "^0.1.11",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "readdirp": "^3.6.0"
   }
