--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.15.0",
+    "@mui/x-date-pickers": "^6.18.6",
+    "@types/react-transition-group": "^4.4.10",
     "@wojtekmaj/react-hooks": "^1.18.1",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
     "downloadjs": "^1.4.7",
     "events": "^3.3.0",
     "nodemon": "^3.0.2",
@@ -20,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-pdf": "^7.6.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
     "vite-plugin-static-copy": "^1.0.0",
