--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.23.7",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
@@ -18,15 +19,21 @@
     "nodemon": "^3.0.2",
     "normalize.css": "^8.0.1",
     "pdfjs-dist": "^4.0.269",
+    "pkgfiles": "^2.3.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-material-ui-carousel": "^3.4.2",
     "react-pdf": "^7.6.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
+    "react-swipeable-views-core": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "vite-plugin-static-copy": "^1.0.0",
+    "warning": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
