--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,12 @@
 REACT_APP_API_URL=http://localhost:5000
+API_URL=http://localhost:3000
+NEXT_AUTH_SECRET=KpKLHWpd1ef7sC+AiwNeaQ==
+LDAP_URI=ldap://localhost:10389
+LDAP_PASSWORD=123
+LDAP_PASSWORD=<your-ldap-password>
+LDAP_BASE_DN=ldap://localhost:10389/dc=example,dc=com
+MONGODB_URI=mongodb://localhost:27017/ai_bank
+NODE_ENV=production
+REACT_APP_KEYCLOAK_REALM=banks
+REACT_APP_KEYCLOAK_URL=http://localhost:8080
+REACT_APP_KEYCLOAK_CLIENT_ID=bdc_bank
