--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "handlebars": "^4.7.8",
     "html-pdf": "^3.0.1",
     "html-to-pdf": "^0.1.11",
+    "keycloak-js": "^23.0.7",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
